# gw2-rs

./: .gitignore  Cargo.toml
crates/gw2-cli/: Cargo.toml  currencies.json  get_items.sh  wallet.json
crates/gw2-cli/src/: bank.rs  characters.rs  main.rs
crates/gw2-metrics/: Cargo.toml
crates/gw2-metrics/src/: main.rs
crates/gw2-tui/: Cargo.toml
crates/gw2-tui/src/: main.rs  main_select.rs
crates/wallet-watcher/: .README.md.swp  Cargo.toml  README.md
crates/wallet-watcher/src/: main.rs
src/: client.rs  codec.rs  endpoints.rs  lib.rs
src/codec/: account.rs  achievements.rs  backstory.rs  characters.rs  commerce.rs  emblems.rs  floors.rs  guild.rs  pvp.rs  skills.rs  specializations.rs  stories.rs  token_info.rs  traits.rs  wvw.rs
src/endpoints/: account.rs  achievements.rs  backstory.rs  characters.rs  commerce.rs  emblems.rs  floors.rs  guild.rs  pvp.rs  skills.rs  specializations.rs  stories.rs  token_info.rs  traits.rs  wvw.rs
