[package]
name = "gw2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pct-str = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde-enum-str = "0.2.5"
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", default-features = false, features = ["v4", "serde"] }


[workspace]
members = [
    "crates/gw2-cli"
]