[package]
name = "gw2-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
gw2 = {path = "../../"}
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
metrics = "0.18"
metrics-exporter-prometheus = "0.9"
