[package]
name = "wallet-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "4.0"
gw2 = {path = "../../"}
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.27", features = ["bundled", "chrono"] }
